# CmakeBasics

./: CMakeLists.txt  helloWorld.cpp  meson.build
buildmeson/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  helloWorldMeson
buildmeson/meson-info/: intro-buildsystem_files.json  intro-targets.json  meson-info.json
buildmeson/meson-logs/: meson-log.txt
buildmeson/meson-private/: coredata.dat.prev
meson/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  helloWorldMeson
meson/meson-info/: intro-dependencies.json  intro-projectinfo.json  intro-targets.json  meson-info.json
meson/meson-logs/: meson-log.txt
